fix layout issue

--- a/public/stylesheets/navi.css
+++ b/public/stylesheets/navi.css
@@ -69,3 +69,4 @@ padding: 5px;
 #navi table tr td.navi_huo{background-color: #9b18fb;}
 #navi table tr td.navi_che{background-color:#7913c4;}
 #navi table tr td.navi_user{background-color:#440c6c;}
+table.navi tr td {background-color:#440c6c;}
